find-core/src/main/public/static/css/app-include.css
/* ... */
.results-contents {
    display: block;
    overflow: hidden;
}
/* Loading spinner */
.loading-spinner {
    text-align: center;
    font-size: 18px;
}

.loading-spinner, .loading-spinner i {
    color: #00b388;
}

.loading-spinner.loading-spinner-lg {
    font-size: 28px;
    line-height: 32px;
}

/* fancy colourbox buttons */
.btn-colorbox, .btn-colorbox:focus {
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    background-color: #929292;
    background-image: linear-gradient(to bottom, #898D90, #707476);
    background-repeat: repeat-x;
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff46aeea', endColorstr='#ff2fa4e7', GradientType=0);
    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
}

.btn-colorbox:active {
    background-color: #707476;
    background-image: none;
    outline: 0;
    -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
    -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
    box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
}

.btn-colorbox:focus {
    background-color: #707476;
    outline: 0 none;
}
/* end of btn override from the bootstrap-custom */

.result-summary {
    text-align: justify;
    overflow: hidden;
    text-overflow: clip;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    max-height: 41px;
}

.result-thumbnail {
    text-align: justify;
    overflow: hidden;
    text-overflow: clip;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    float: left;
    margin: 0 5px 0 0;
}

.clear-both {
    clear: both;
}

.result-thumbnail > img {
    max-height: 600px;
}

.related-concepts-list {
    padding-left: 0;
}

.search-page .popover {
    width: 250px;
}

.popover-content a {
    margin:0;
    font-weight: 700;
}

.search-text {
    font-weight: bold
}

.service-view-container {
    height: 100%;
}

.service-view-container .hp-check {
    color: #00b388;
}

@media only screen and (max-width: 1210px) {
    .find-input {
        height:25px;
        font-size: 24px;
    }
}

.drop-list {
    position: absolute;
    right: 20px;
    z-index: 1000;
    font-size: 18px;
}

.drop-list .dropdown-toggle {
    padding: 5px 7px 5px 13px;
}

.dropdown-menu li > a {
    color: #676a6c;
}

.find-navbar .dropdown-toggle {
    color: #fff;
}

.find-navbar .dropdown-toggle:hover,
.find-navbar .nav li.open a.dropdown-toggle {
    background-color: #949494;
}

.list-indexes {
    right: -65px;
}

.disabled-index {
    color: #aaa;
    cursor: not-allowed;
    pointer-events: none;
}

.indexes-list-group .controls {
    margin-left: 100px;
}

.indexes-list-group .control-label {
    text-align: left;
    width: 100px;
}

input.find-input[type="text"], input.find-input[type="text"]:focus {
    border-color: transparent;
    box-shadow: none;
    border-radius: 0;
    height: 30px;
    padding-right: 40px;
}

input::-webkit-input-placeholder,
input::-moz-placeholder {
    color: #425563;
    opacity: 0.5;
}

.find-input::-webkit-input-placeholder::before,
.find-input::-moz-placeholder::before,
.find-input:-ms-input-placeholder::before,
input:-moz-placeholder::before {
    font-family: fontAwesome;
    content: '\f105';
    color: #425563;
}

.find-navbar {
    background-color: #425563;
    color: #fff;
    -webkit-transition: all 0.5s ease;
    transition: all 0.5s ease;
    margin-bottom: 0;
    height: 50px;
}

.find-navbar.reduced {
    background: #49B59B url('../img/Find_banner.png');
    height: 125px;
}

.popover h1, .popover h2, .popover h3, .popover h4, .popover h5, .popover h6 , .popover a{
    color: #00b388;
}

/*TODO use bootstrap theme customiser for these */
.popover {
    border-radius: 0;
}

.popover, .popover-title {
    background-color:#353535;
}

.popover-content p {
    color: #fff;
    font-size: 12px;
}

.popover-content {
    padding: 15px 14px 9px;
}

.popover-title {
    display: none;
}

.popover.bottom > .arrow:after {
    border-bottom-color:#353535;
}

@media (min-width: 980px) {
    .page .body {
        left: 0;
        position: fixed;
        right: 0;
    }

    .page .body {
        bottom: 32px;
        top: 50px;
        overflow: auto;
        -webkit-transition: bottom 0.5s ease;
        transition: bottom 0.5s ease;
    }
}

@media (max-width: 991px) {
    .reverse-animated-container .find-form {
        width: 100%;
    }
}

.filter-checkbox {
    margin-right: 10px;
}

.filter-display-view {
    line-height: 2.0em;
}

.shorten {
    max-width: 130px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.filter-display-text {
    vertical-align: middle;
    line-height: 1.2em;
}

.filters-margin {
    margin-top: 0;
    margin-right: 5px;
}

.filters-remove-icon {
    margin-left: 5px;
}

.remove-all-filters .fa-bars {
    left: 0;
    top: 0;
    padding: 0;
    width: 8px;
    height: 9px;
    color: #c0c0c0;
}

.remove-all-filters .fa-remove {
    font-size: 1.5em;
    color: #5C5959;
}

.no-bottom-margin {
    margin-bottom: 0;
}

.inline-block {
    display: inline-block;
}

.filter-label {
    background-color: #FFFFFF !important;
    padding: 5px;
    font-size: 100%;
    font-weight: normal;
    color: #5e5e5e;
    border: solid 1px #dddddd;
    border-radius: 0;
}

.filter-label span {
    color: #425563;
}

.label-white.border {
    border: 1px solid #e7eaec;
}

.entity-label {
    background-color: #6b7984;
    padding: 0 8px;
}
/* Rotating chevrons on collapsible panels *******************/
.collapsed .rotating-chevron,
.collapsed.rotating-chevron {
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
    -webkit-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
}
/* ... */

